# e-treasure-hunt

./: .gitignore  CONTRIBUTING.md  Dockerfile  Procfile  README.md  manage.py  prebuild.sh  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  upload.py
.github/workflows/: linting.yml
admin_scripts/: calculate_winners.py  download.py  level_validation.py  site_scraper.py  upload.py
azure/: .terraform.lock.hcl  .terraform.tfstate.lock.info  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
hunt/: admin.py  apiviews.py  apps.py  backend.py  constants.py  forms.py  hint_mgr.py  hint_release.py  hint_request.py  hints.py  level_mgr.py  levels.py  models.py  slack.py  tests.py  urls.py  utilities.py  utils.py  validators.py  views.py
hunt/chat/: consumers.py  routing.py
hunt/docs/: Design.md  ExampleObjects.md  PossibleImprovements.md
hunt/migrations/: 0001_initial.py  0002_auto_20200225_2222.py  0002_auto_20200329_1441.py  0002_auto_20210208_2240.py  0002_remove_huntinfo_slack_channel.py  0003_alter_level_latitude_alter_level_longitude.py  0003_auto_20210209_2229.py  0003_huntinfo_hint_requested.py  0004_auto_20210209_2241.py  0004_chatmessage.py  0004_userlevel_next_hint_release.py  0005_auto_20200315_2108.py  0005_auto_20210218_1420.py  0006_auto_20200329_1229.py
hunt/static/: alternate-map.js  cshold.css  google-map.js  jshold.js  map-style-2.css  map-style.css  mgmt-style.css  style.css  welcome-style.css
hunt/templates/: alternate-map.html  answer-mgmt.html  base.html  chat.html  google-map.html  hint-mgmt.html  initial-level-mgmt.html  level-graph.html  level-mgmt.html  level.html  levels.html  map-base.html  maphold.html  mgmt-base.html  mgmt.html  nothing.html  oops.html  room.html  search.html  welcome.html  work-time.html
hunt/templates/registration/: login.html
terraform/: main.tf  output.tf  variables.tf
tests/: conftest.py  factories.py  test_hint_mgr.py  test_hints.py  test_levels.py  test_levels_db.py  test_levels_db_split.py  test_models.py  test_utilities.py
tests/input/: description.txt  location.json
treasure/: asgi.py  settings.py  urls.py  wsgi.py
