[tool.poetry]
name = "e-treasure-hunt"
version = "0.1.0"
description = ""
authors = ["David Hotham <david.hotham@blueyonder.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^9.2.0"
django = "^4.0.7"
django-storages = [
  { version = "^1.13.1" },
  { version = "^1.13.1", extras = ["azure"], markers = "extra == 'azure'" },
]
djangorestframework = "^3.14.0"
geopy = "^2.2.0"
holidays = "^0.16"
whitenoise = "^6.2.0"

# Things needed for azure deployment.
azure-identity = { version = "^1.11.0", optional = true }
mssql-django = { version = "^1.1.3", optional = true }

[tool.poetry.extras]
azure = ["azure-identity", "mssql-django"]

[tool.poetry.group.dev.dependencies]
black = ">=22.8.0"
django-stubs = ">=1.12.0"
djangorestframework-stubs = ">=1.7.0"
flake8 = ">=5.0.4"
flake8-type-checking = ">=2.1.3"
isort = ">=5.10.1"
mypy = ">=0.981"
requests = ">=2.28.1"
types-backports = ">=0.1.3"
types-requests = ">=2.28.11"

[tool.black]
exclude = "hunt/migrations"

[tool.isort]
profile = "black"
skip = "hunt/migrations"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = "."
strict = true
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
show_error_codes = true
plugins = [
  "mypy_django_plugin.main",
  "mypy_drf_plugin.main"
]

[[tool.mypy.overrides]]
module = [
  "holidays.*",
]
no_implicit_reexport = false

[[tool.mypy.overrides]]
module = [
  "azure.identity.*",
  "geopy.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "treasure.settings"
