[tool.poetry]
name = "e-treasure-hunt"
version = "0.1.0"
description = ""
authors = ["David Hotham <david.hotham@blueyonder.co.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
django-storages = [
  { version = "^1.13.1" },
  { version = "^1.13.1", extras = ["azure"], markers = "extra == 'azure'" },
]
djangorestframework = "^3.14.0"
geopy = "^2.3.0"
holidays = "^0.17.2"
pillow = "^9.3.0"
whitenoise = "^6.2.0"

# Things needed for azure deployment.
azure-identity = { version = "^1.12.0", optional = true }
mssql-django = { version = "^1.2", optional = true }

[tool.poetry.extras]
azure = ["azure-identity", "mssql-django"]

[tool.poetry.group.lint.dependencies]
black = ">=22.10.0"
flake8 = ">=6.0.0"
flake8-type-checking = ">=2.3.0"
isort = ">=5.10.1"
mypy = ">=0.991"

[tool.poetry.group.misc.dependencies]
requests = ">=2.28.1"

[tool.poetry.group.types.dependencies]
django-stubs = ">=1.13.1"
djangorestframework-stubs = ">=1.8.0"
types-backports = ">=0.1.3"
types-requests = ">=2.28.11.5"

[tool.black]
exclude = "hunt/migrations"

[tool.isort]
profile = "black"
skip = "hunt/migrations"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = "."
strict = true
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
show_error_codes = true
plugins = [
  "mypy_django_plugin.main",
  "mypy_drf_plugin.main"
]

[[tool.mypy.overrides]]
module = [
  "holidays.*",
]
no_implicit_reexport = false

[[tool.mypy.overrides]]
module = [
  "geopy.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "treasure.settings"
